--- a/onYOURway/App/themes/onYOURway/css/onYOURway.less
+++ b/onYOURway/App/themes/onYOURway/css/onYOURway.less
@@ -570,7 +570,7 @@ nav .dropdown-toggle:hover:after {
 	background-color: @accent1;
 	color: #fff;
 	margin: 0;
-	margin-top: 50px;
+	margin-top: 0;
 	text-align: left;
 	vertical-align: top;
 	padding: 5px 0 0 5px;
