--- a/onYOURway/App/views/_nav.html
+++ b/onYOURway/App/views/_nav.html
@@ -14,6 +14,15 @@
 			<!--/branding-->
 		</div>
 
+		<div class="navbar-header visible-xs">
+
+			<!--branding-->
+			<a class="brand navbar-right pull-right" href="#">
+				<img src="../App/images/logo.targetsize-48.png" alt="onYOURway">
+			</a>
+			<!--/branding-->
+		</div>
+
 		<!--search-->
 		<form class="navbar-form col-sm-4 hidden-xs" role="search">
 			<div class="input-group">
