--- a/onYOURway/App/themes/onYOURway/css/onYOURway.css
+++ b/onYOURway/App/themes/onYOURway/css/onYOURway.css
@@ -517,7 +517,7 @@ nav .dropdown-toggle:hover:after {
   background-color: #fba21c;
   color: #fff;
   margin: 0;
-  margin-top: 50px;
+  margin-top: 0;
   text-align: left;
   vertical-align: top;
   padding: 5px 0 0 5px;
